deploy/base/tests/rendered/test-service/templates/httproute.yml
---
# Source: test-service/templates/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-service
  namespace: "test"
  labels:
    app.kubernetes.io/name: test-service
    helm.sh/chart: test-service-0.0.0
    app.kubernetes.io/instance: test-service
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "0.0.0"
    app: test-service
  annotations:
spec:
  hostnames:
  - my.test.com
  rules:
  - backendRefs:
    - name: my-test-svc1
      port: 80
      weight: 1
    filters:
    - requestHeaderModifier:
        add:
        - name: my-header
          value: foo
      type: RequestHeaderModifier
