deploy/base/tests/rendered/test-service/templates/networkpolicy.yml
---
# Source: test-service/templates/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-service
  namespace: "test"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: test-service
      app.kubernetes.io/instance: test-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "test"
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "istio-ingress"
    ports:
    - port: 8080
      protocol: TCP
      targetPort: http
